--- a/package.json
+++ b/package.json
@@ -18,6 +18,8 @@
     "@fortawesome/react-fontawesome": "^0.2.0",
     "@mui/icons-material": "^5.15.7",
     "@mui/material": "^5.15.7",
+    "@react-buddy/ide-toolbox": "^2.4.0",
+    "@react-buddy/palette-mui": "^5.0.1",
     "@react-oauth/google": "^0.12.1",
     "@tanstack/react-query": "^5.17.19",
     "@tanstack/react-query-devtools": "^5.17.21",
@@ -37,9 +39,7 @@
     "react-leaflet-cluster": "^2.1.0",
     "react-query": "^3.39.3",
     "react-router-dom": "^6.22.3",
-    "styled-components": "^6.1.8",
-    "@react-buddy/ide-toolbox": "^2.4.0",
-    "@react-buddy/palette-mui": "^5.0.1"
+    "styled-components": "^6.1.8"
   },
   "devDependencies": {
     "@types/react": "^18.2.43",
@@ -57,6 +57,7 @@
     "postcss": "^8.4.33",
     "prettier": "^3.2.4",
     "prettier-plugin-tailwindcss": "^0.5.11",
+    "rollup-plugin-postcss": "^4.0.2",
     "tailwindcss": "^3.4.1",
     "vite": "^5.0.8"
   }
